--- a/CapaVista/Properties/Resources.resx
+++ b/CapaVista/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="anadir_nuevo_usuario" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\anadir-nuevo-usuario.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Basic_Elements__28121_29_removebg_preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Basic_Elements__28121_29-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="bienvenido_de_nuevo" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bienvenido-de-nuevo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -250,6 +253,18 @@
   <data name="metodo_de_pago__1_" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\metodo-de-pago (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="OjoAbierto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OjoAbierto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OjoAbierto1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OjoAbierto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OjoCerrado" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OjoCerrado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="OjoCerrado1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OjoCerrado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="parcel" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\parcel.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -261,6 +276,9 @@
   </data>
   <data name="proveedor" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\proveedor.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Signo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Signo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="SignoMasFinal" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SignoMasFinal.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -309,6 +327,9 @@
   </data>
   <data name="_10542477" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\10542477.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_1828926_removebg_preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\1828926-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="_8462238" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\8462238.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
